--- a/app/src/main/res/layout/activity_display_leader_board.xml
+++ b/app/src/main/res/layout/activity_display_leader_board.xml
@@ -26,7 +26,9 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="LeaderBoard: "
+        android:text="LeaderBoard"
+        android:textAlignment="center"
+        android:textAllCaps="false"
         android:textSize="50dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/yourBestScore"
@@ -50,6 +52,20 @@
         app:layout_constraintVertical_bias="0.549" />
 
     <TextView
+        android:id="@+id/yourBestMed"
+        android:layout_width="135dp"
+        android:layout_height="38dp"
+        android:background="@drawable/round"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/textViewHard"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.464"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bestScore" />
+
+    <TextView
         android:id="@+id/textViewHard"
         android:layout_width="135dp"
         android:layout_height="38dp"
@@ -60,6 +76,19 @@
         android:textSize="30dp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/yourBestHard"
+        android:layout_width="135dp"
+        android:layout_height="38dp"
+        android:background="@drawable/round"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="30dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.464"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
@@ -132,7 +161,7 @@
         android:textSize="30sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textViewEasy"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.458"
+        app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
