--- a/app/src/main/res/layout/circles.xml
+++ b/app/src/main/res/layout/circles.xml
@@ -234,27 +234,30 @@
         android:id="@+id/play"
         android:layout_width="107dp"
         android:layout_height="62dp"
-        android:layout_marginEnd="312dp"
         android:layout_marginBottom="112dp"
         android:backgroundTint="@android:color/white"
         android:text="play"
         android:textColor="#171616"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/background_canvas"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/playText"
         android:layout_width="367dp"
         android:layout_height="44dp"
-        android:layout_marginEnd="192dp"
-        android:layout_marginBottom="52dp"
         android:text="Click the play button to start"
         android:textAlignment="center"
         android:textColor="@color/Black"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/background_canvas"
+        app:layout_constraintVertical_bias="0.836" />
 
     <TextView
         android:id="@+id/headerText"
