--- a/app/src/main/res/layout/reaction_game_page.xml
+++ b/app/src/main/res/layout/reaction_game_page.xml
@@ -12,7 +12,7 @@
         android:id="@+id/startPromptMsgTxt"
         android:layout_width="353dp"
         android:layout_height="46dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="16dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="@string/Start_prompt"
@@ -21,23 +21,7 @@
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playButton" />
-
-    <ImageView
-        android:id="@+id/playButton"
-        android:layout_width="51dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="225dp"
-        android:layout_marginBottom="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/startPromptMsgTxt"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/display_msg"
@@ -46,15 +30,28 @@
         android:layout_marginStart="217dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="228dp"
-        android:layout_marginBottom="60dp"
         android:textAlignment="center"
         android:textSize="28sp"
-        app:layout_constraintBottom_toTopOf="@+id/playButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/reaction_game_title"
+        android:layout_width="622dp"
+        android:layout_height="70dp"
+        android:text="Reaction Game"
+        android:textAlignment="center"
+        android:textColor="@color/Black"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.394"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.146" />
 
     <TextView
         android:id="@+id/waitForGreen"
@@ -63,16 +60,13 @@
         android:layout_marginStart="251dp"
         android:layout_marginTop="27dp"
         android:layout_marginEnd="284dp"
-        android:layout_marginBottom="20dp"
         android:text="Wait for green ..."
         android:textAlignment="center"
         android:textSize="28sp"
-        app:layout_constraintBottom_toTopOf="@+id/playButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/display_msg"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/display_msg" />
 
     <Button
         android:id="@+id/exit_button"
@@ -111,4 +105,20 @@
         app:layout_constraintStart_toEndOf="@+id/exit_button"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.342" />
+
+    <Button
+        android:id="@+id/playButtonRxn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@android:color/white"
+        android:text="Play"
+        android:textColor="#171616"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/startPromptMsgTxt"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.499"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
